the_project/todo_backend/manifests/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-deployment
  namespace: project
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: todo-backend
          image: docker.io/iku1/todo_backend:4.5.2
          imagePullPolicy: Always
          envFrom: # Load POSTGRES_PASSWORD
            - secretRef:
                name: pg-password
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 5005
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 3
            httpGet:
               path: /healthz
               port: 5005
